<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">X-Change</string>
    <string name="edit_message">Enter a Currency</string>
    <string name="button_predict">X-Change!</string>
    <string name="button_exchange">See Exchange Rates</string>
    <string name="button_stats">See the Statistics</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_prediction">Prediction</string>
    <string name="title_activity_prediction_view">PredictionView</string>
    <string name="title_activity_statistics_view">StatisticsView</string>
    <string name="title_activity_exchange_view">ExchangeView</string>

    <string name="currency">Currency</string>
    <string name="exchangeRate">Rate (USD)</string>
    <string name="refresh">Refresh</string>

    <string name="EUR">Euro</string>
    <string name="EURRATE">0.8388</string>

    <string name="JPY">Yen</string>
    <string name="JPYRATE">119.63</string>

    <string name="GBP">Pound</string>
    <string name="GBPRATE">0.6557</string>

    <string name="CHF">Swiss Frank</string>
    <string name="CHFRATE">0.9931</string>

    <string name="CAD">Canadian Dollar</string>
    <string name="CADRATE">1.1763</string>

    <string name="INR">Indian Rupee</string>
    <string name="INRRATE">63.42</string>

</resources>
